logs/simms.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simms'...
Compiling './lib/python3.5/site-packages/simms/casasm.py'...
***   File "./lib/python3.5/site-packages/simms/casasm.py", line 35
    lon,lat,rad = [ refpos[x]['value'] for x in 'm0','m1','m2' ]
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/simms/observatories'...
Compiling './lib/python3.5/site-packages/simms/simms.py'...
***   File "./lib/python3.5/site-packages/simms/simms.py", line 31
    print "%s ##INFO: %s"%(t,string)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/simms/src'...
Compiling './lib/python3.5/site-packages/simms/src/uvgen.py'...
***   File "./lib/python3.5/site-packages/simms/src/uvgen.py", line 33
    print "%s ##INFO: %s"%(t, string)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/simms-1.0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
